--- a/Yedda/ikun.html
+++ b/Yedda/ikun.html
@@ -20,6 +20,6 @@
     <h5>待我ikun更强大,定帮坤哥赢天下</h5>
     <h6>追梦少年不失眠，未来可期蔡徐坤</h6>
     <p>ikun</p>
-    <img src="https://cdn.jsdelivr.net/gh/radium-bit/res@latest/ikun.gif" alt="">
+    <img src="https://cdn.jsdelivr.net/gh/radium-bit/res@latest/logo.png.webp" alt="">
 </body>
 </html>
